<resources>
    <string name="app_name">RisingCamp2</string>

    <string name="home">홈</string>
    <string name="small_town_life">동네생활</string>
    <string name="my_location">내 근처</string>
    <string name="chatting">채팅</string>
    <string name="my_page">나의 당근</string>
    <string name="title_activity_my_location">MyLocationActivity</string>
    <string name="title_activity_main">MainActivity</string>
</resources>