<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuHome"
        android:title="@string/home"
        android:icon="@drawable/sel_btn_home"
        android:checked="true"
        app:showAsAction="always"
        app:labelVisibilityMode="labeled"
        />
    <item
        android:id="@+id/menuLife"
        android:title="@string/small_town_life"
        android:icon="@drawable/sel_btn_life"
        app:showAsAction="always"
        app:labelVisibilityMode="labeled"
        />
    <item
        android:id="@+id/menuLocation"
        android:title="@string/my_location"
        android:icon="@drawable/sel_btn_location"
        app:showAsAction="always"
        app:labelVisibilityMode="labeled"
        />
    <item
        android:id="@+id/menuChat"
        android:title="@string/chatting"
        android:icon="@drawable/sel_btn_chat"
        app:showAsAction="always"
        app:labelVisibilityMode="labeled"
        />
    <item
        android:id="@+id/menuMypage"
        android:title="@string/my_page"
        android:icon="@drawable/sel_btn_mypage"
        app:showAsAction="always"
        app:labelVisibilityMode="labeled"
        />
</menu>